<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.kies</groupId>
  <artifactId>sgsc</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>sgsc</name>
  <url>http://maven.apache.org</url>
  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven-jar-plugin.version>3.1.1.</maven-jar-plugin.version>
        <java.version>11</java.version>
  </properties>
  
  <parent> 
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-parent</artifactId>
      <version>2.1.6.RELEASE</version>   
  </parent>
  
  <dependencies>
  	<dependency>
	    <groupId>io.jsonwebtoken</groupId>
	    <artifactId>jjwt</artifactId>
	    <version>0.9.1</version>
	</dependency>
	 <dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>8.0.22</version>
	</dependency>
	<dependency> 
		<groupId>com.fasterxml.jackson.core</groupId> 
		<artifactId>jackson-databind</artifactId> 
		<version>2.9.3</version> 
	</dependency> 
	<dependency> 
		<groupId>org.codehaus.jackson</groupId> 
		<artifactId>jackson-mapper-asl</artifactId> 
		<version>1.9.13</version> 
		</dependency>
	  <dependency>
	      <groupId>com.google.firebase</groupId>
	      <artifactId>firebase-admin</artifactId>
	      <version>6.5.0</version>
	   </dependency> 
	 	<dependency>
	       <groupId>org.springframework.boot</groupId>
	       <artifactId>spring-boot-starter-web</artifactId>
	       <!-- Use Jetty instead 
	    <exclusions>
	    	<exclusion>
	    		<groupId>org.springframework.boot</groupId>
	    		<artifactId>spring-boot-starter-tomcat</artifactId>
	    	</exclusion>
	    </exclusions>-->
	</dependency>
	<dependency>
	    <groupId>org.springframework.boot</groupId> 
	    <artifactId>spring-boot-starter-websocket</artifactId>
	</dependency>
	<!-- Use Jetty instead 
	<dependency> 
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-jetty</artifactId> 
	</dependency>
	--> 
	   <dependency>
	       <groupId>org.springframework.boot</groupId>
	       <artifactId>spring-boot-starter-test</artifactId>
	   </dependency> 
	   <dependency>
	       <groupId>org.mybatis.spring.boot</groupId>
	       <artifactId>mybatis-spring-boot-starter</artifactId>
	       <version>2.1.3</version>
	   </dependency>
	   <dependency>
	   	<groupId>org.springframework.boot</groupId>
	   	<artifactId>spring-boot-starter-jdbc</artifactId>
	</dependency>
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-configuration-processor</artifactId>
	    <optional>true</optional>
	</dependency>
	<dependency> 
		<groupId>org.springframework.boot</groupId> 
		<artifactId>spring-boot-starter-amqp</artifactId> 
	</dependency>
	<!-- <dependency> 
		<groupId>org.springframework.amqp</groupId> 
		<artifactId>spring-rabbit-test</artifactId> 
		<scope>test</scope> 
	</dependency> -->

	   <!-- Hot deploy -->
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-devtools</artifactId>
		<optional>true</optional>
	</dependency>
	<dependency>
	       <groupId>commons-fileupload</groupId>
	       <artifactId>commons-fileupload</artifactId>
	       <version>1.3.2</version>
	   </dependency>
	   <dependency>
	       <groupId>commons-io</groupId>
	       <artifactId>commons-io</artifactId>
	       <version>2.5</version>
	   </dependency>
	   <dependency>
	       <groupId>org.mybatis</groupId>
	       <artifactId>mybatis</artifactId>
	       <version>3.5.6</version>
	   </dependency>
	   <dependency>
	       <groupId>org.mybatis</groupId> 
	       <artifactId>mybatis-spring</artifactId>
	       <version>1.3.0</version>
	   </dependency>
	   <dependency>
	     <groupId>junit</groupId>
	     <artifactId>junit</artifactId>
	     <version>3.8.1</version>
	     <scope>test</scope>
	   </dependency>
	   <dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>jstl</artifactId>
	</dependency>
	<dependency>
	    <groupId>org.apache.tomcat.embed</groupId>
	    <artifactId>tomcat-embed-jasper</artifactId>
	</dependency>
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-aop</artifactId>
	</dependency>
	<dependency>
	    <groupId>org.springframework.kafka</groupId>
	    <artifactId>spring-kafka</artifactId>
	    <version>2.2.8.RELEASE</version>
	</dependency>
		<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-configuration-processor</artifactId>
		<optional>true</optional>
	</dependency>
	
	<dependency>
	<groupId>org.springframework.boot</groupId>
	<artifactId>spring-boot-starter-data-jdbc</artifactId>
	</dependency>
	
	<dependency>
		<groupId>com.microsoft.sqlserver</groupId>
		<artifactId>mssql-jdbc</artifactId>
		<scope>runtime</scope>
	</dependency>
  </dependencies>
  <build>
  	<plugins>
          <plugin>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-maven-plugin</artifactId>
          </plugin>
          <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.1</version>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.22.0</version>
		    <configuration>
		        <argLine>
		            --illegal-access=permit
		        </argLine>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-failsafe-plugin</artifactId>
		    <version>2.22.0</version>
		    <configuration>
		        <argLine>
		            --illegal-access=permit
		        </argLine>
		    </configuration>
		</plugin>
      </plugins> 
      
    <finalName>sgsc</finalName>
  </build>
</project>
